# topUI

./: README.md  docker-compose.yml
backend/: Dockerfile
backend/app/: CMakeLists.txt
backend/app/src/: main.cpp  proccontroller.cpp  proccontroller.h
frontend/: Dockerfile  index.html  nginx.conf  package.json  styles.css  tsconfig.json  webpack.config.js
frontend/src/: app.ts
